frontend/test/should_pass/iterated_repl.grg
rule r
{
	iterated foo {
		y:Node;

		modify {
			x --> y;
		}
	}
	
	modify {
		x:Node;
		iterated foo;
	}
}

pattern p
{
	iterated foo {
		y:Node;

		modify {
			x --> y;
		}
	}
	
	modify {
		x:Node;
		iterated foo;
	}
}
