frontend/test/should_fail/independent_008.grg
pattern p
{
    independent {
        iterated {
            n:Node;
			
            modify {
            }
        }
    }

    modify {
	}
}

